added test data for database

--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ${PLUGIN_PATH}:/tests_directory
       - ${QGIS_PROFILE_PATH}/:/root/.local/share/QGIS/QGIS3/profiles/default
+      - ${QGIS_DATA_PATH}:/tmp
     stdin_open: true
     tty: true
     depends_on:
